# teradata-ships

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  README.md  README_DEMO_PACKAGING.md  RENAME_QUICK_START.md  SHIPS_RENAME_AUDIT.md  main.py  pyproject.toml  rename_ships_repo.ps1  rename_ships_repo.py  rename_ships_repo.sh  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/hooks/: skill_sync_reminder.py
.codex/: hooks.json
.ships-demo/CargoIntelligence/: .gitignore  README.md  object_placement.yaml  ships.yaml
config/env/: PRD.conf  TST.conf
config/properties/: DEV.properties
docs/: 0RUNSHEET_EXAMPLES.html  AGENT_INTEGRATION.md  CLEARSCAPE_NOTEBOOK.md  FAQ.md  INSTALLATION.md  MCP_GUIDE.md  MISSION.md  OBSERVABILITY.md  OPERATIONS_GUIDE.md  PITCH.md  RUNSHEET_EXAMPLES.md  SHIPS_GLOSSARY.md  SHIPS_MODULE_ARGS.md  USER_GUIDE.md  security_prerequisites.md
docs/adr/: 0001-record-architecture-decisions.md  0002-ships-pipeline-phase-structure.md  0003-token-engine-multi-environment-promotion.md  0004-atomic-eponymous-ddl-files.md  0005-wave-ordering-for-deployment.md  0006-deployer-owns-idempotency.md  0007-package-level-rollback-pre-flight-snapshot.md  0008-dcl-subdirectory-structure-grant-inference.md  0009-configurable-deploy-intent-with-waiver.md  0010-utf8-session-charset-for-teradatasql.md  0011-sha256-package-integrity-fingerprinting.md  0012-package-trust-score-design.md  0013-release-group-output-directory.md  0014-deploy-time-trust-resolution-for-environment-prereqs.md  0015-ast-based-sql-reference-inference.md  0016-git-as-canonical-packaging-source.md
docs/deployment/: README.md  linux-systemd.md  linux-sysv-initd.md  windows-service-nssm.md
docs/design-rationale/: README.md  dml-naming.md  eponymous-atomic-scripts.md  object-type-extensions.md
docs/references/: ai_native_data_product_discovery.md  catalogue_metadata_export.md  changeset_detection.md  custom_lint_policy.md  deploy_intents.md  inspect_rules.md  plan_command.md  tokenisation.md
docs/sessions/: pr-docs-313-deployment-recipes.md  pr-feat-301-mcp-rotating-log.md  pr-feat-302-mcp-async-resilience.md  pr-feat-309-prefix-tokeniser.md  pr-feat-5602-jar-relative-paths.md  pr-feat-zip-release-group-deploy.md  pr-fix-303-parser-classify-stats-db.md  pr-fix-307-placement-defaults-separated.md  pr-fix-311-token-map-identifier-aware.md  pr-fix-319-mcp-fire-and-forget.md
docs/use-cases/: README.md  customer-demo-package.md  harvest-tokenise-runsheet.md  tokenised-payload-multi-env-package.md
examples/callcentre/: .gitignore  README.md  object_placement.yaml  ships.project.json  ships.project_actions.json  ships.project_policy.json  ships.yaml
src/: ships_async.py  ships_dashboard.py  ships_lineage.py  ships_logging.py  ships_mcp.py  ships_mcp_auth.py  ships_tracing.py
src/database_package_deployer/: __init__.py  __main__.py  asym_signing.py  audit.py  builder.py  cli.py  deploy_runtime.py  deployer.py  drift.py  github_source.py  grant_audit.py  manifest.py  mcp_tool.py  migration_builder.py  models.py  mpa.py  otel.py  package_metadata.py  package_report.py  preflight.py  privilege_check.py  provenance.py  provenance_renderer.py  report.py  report_viewer.py  schema_comparator.py  signing.py  statement_parser.py  wave_executor.py  wave_parser.py
src/ddl_deployer/: __init__.py  __main__.py  cli.py  ddl_parser.py  deployer.py  manifest.py  mcp_tool.py  migration_builder.py  models.py  preflight.py  privilege_check.py  provenance_renderer.py  report.py  schema_comparator.py  wave_executor.py  wave_parser.py
src/td_release_packager/: __init__.py  __main__.py  _version.py  actions.py  analyser.py  builder.py  (+82 more)
tools/: bootstrap_env_config.py  bootstrap_properties.py  decompose_database_names.py  generate_view_layer.py  import_legacy_substitutions.py  migrate_view_references.py  object_placement.yaml  orchestrator_demo.py  ships-mcp-launch.cmd
(+660 files in other folders)
