[project]
name = "teradata-deployment-agent"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "teradatasql>=20.0.0.56",
    "pyyaml>=6.0",
    "mcp>=1.27.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
# Tests live under src/tests/ and the package under src/. Pinning
# both here means `pytest`, `pytest src/tests/`, and even
# `pytest tests/` (typo / muscle memory) all resolve to the same
# collection — and PYTHONPATH=src is no longer required.
testpaths = ["src/tests"]
pythonpath = ["src"]
