[project]
name = "teradata-deployment-agent"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "teradatasql>=20.0.0.56",
    "pyyaml>=6.0",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
# Install with: uv pip install -e ".[otel]"
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
# Install with: uv pip install -e ".[lineage]"
# Provides the openlineage-python client for richer transport options.
# ships_lineage.py works without this extra (stdlib HTTP + file transports).
lineage = [
    "openlineage-python>=1.18.0",
]
# Install with: uv pip install -e ".[dashboard]"
# Enables the SHIPS Deployment Dashboard web application.
dashboard = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
# Tests live under src/tests/ and the package under src/. Pinning
# both here means `pytest`, `pytest src/tests/`, and even
# `pytest tests/` (typo / muscle memory) all resolve to the same
# collection — and PYTHONPATH=src is no longer required.
testpaths = ["src/tests"]
pythonpath = ["src"]
