[project]
name = "teradata-ships"
version = "0.4.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "teradatasql>=20.0.0.56",
    "pyyaml>=6.0",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
# Install with: uv pip install -e ".[otel]"
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
# Install with: uv pip install -e ".[lineage]"
# Provides the openlineage-python client for richer transport options.
# ships_lineage.py works without this extra (stdlib HTTP + file transports).
lineage = [
    "openlineage-python>=1.18.0",
]
# Install with: uv pip install -e ".[dashboard]"
# Enables the SHIPS Deployment Dashboard web application.
dashboard = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
# Install with: uv pip install -e ".[signing]"
# Enables Ed25519 asymmetric package signing (Option C — ships keygen / --asymmetric-key).
signing = [
    "cryptography>=42.0",
]
# Install with: uv pip install -e ".[ast]"
# Enables the AST-based SqlReferenceExtractor (Phase 2+ of #234 / ADR 0015).
# SHIPS works without this extra — the default extractor falls back to regex.
ast = [
    "sqlglot>=25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    # Dashboard test dependencies — fastapi TestClient requires httpx
    "fastapi>=0.115",
    "httpx>=0.27",
    # Phase 2+ of #234 — the SqlGlot extractor is opt-in for users but
    # mandatory for the test suite so the compare-mode corpus runs.
    "sqlglot>=25.0",
]

[tool.pytest.ini_options]
# Tests live under src/tests/ and the package under src/. Pinning
# both here means `pytest`, `pytest src/tests/`, and even
# `pytest tests/` (typo / muscle memory) all resolve to the same
# collection — and PYTHONPATH=src is no longer required.
testpaths = ["src/tests"]
pythonpath = ["src"]
